projects now display correct alignment

--- a/funsun/style.css
+++ b/funsun/style.css
@@ -146,7 +146,59 @@ hr {
     left: 68px;
 }
 
+/***** PROJECTS SECTION *****/
+
+.projects {
+    color: white;
+    text-align: center;
+}
+
+.projects h3 {
+    margin: 0;
+    padding: 5%;
+}
+
+.description {
+    padding: 0 10%;
+}
+
+.cta {
+    padding-bottom: 10%;
+}
+
+.demo {
+    text-decoration: none;
+    background: white; 
+    border-radius: 60px;
+    padding: 2%;
+}
+
+.project-1 {
+    background: #306efe;
+}
+
+.project-1 .demo {
+    color: #306efe;
+}
+
+.project-2 {
+    background: #343BA6;
+}
+
+.project-2 .demo {
+    color: #343BA6;
+}
+
+.project-3 {
+    background: #2F1869;
+}
+
+.project-3 .demo {
+    color: #2F1869;
+}
+
 @media only screen and (min-device-width: 768px) {
+
     body {
         font-size: 1.3em;
     }
@@ -186,12 +238,24 @@ hr {
         animation: clouds 4s alternate infinite;
     }
     .projects {
-        display: grid;
-        grid-template-columns: 33.333333% 33.333333% 33.333333%;
+        display: flex;
     }
     img {
         padding: 0 5%;
         width: 90%;
+    }
+
+    .description {
+        //display: flex;
+        justify-items: center;
+    }
+    .cta {
+    }
+    .project-1 {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        padding: 0;
     }
 }
 
@@ -256,53 +320,6 @@ hr {
     }
 }
 
-.projects {
-    color: white;
-    text-align: center;
-    background: #306efe;
-}
-
-.projects h2, .projects h3 {
-    margin: 0;
-    padding: 5%;
-}
-
-.description {
-    padding: 0 10%;
-}
-
-.demo {
-    text-decoration: none;
-    background: white; 
-    border-radius: 60px;
-    padding: 2%;
-}
-
-.project-1 .demo {
-    color: #306efe;
-}
-
-.project-1 {
-    padding-bottom: 10%;
-    background: #306efe;
-}
-
-.project-2 {
-    padding-bottom: 10%;
-    background: #343BA6;
-}
-
-.project-2 .demo {
-    color: #343BA6;
-}
-.project-3 {
-    padding-bottom: 10%;
-    background: #2F1869;
-}
-
-.project-3 .demo {
-    color: #2F1869;
-}
 
 .contact {
     padding: 5%;
@@ -440,7 +457,7 @@ form {
     bottom: 48px;
 }
 
-//.crater:nth-child(9) {
+.crater:nth-child(9) {
     width: 140px;
     height: 140px;
     background-color: #67C5F8;
